<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MultiPlayers4Activity"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="145dp"
        app:layout_constraintBottom_toTopOf="@+id/hostscore"
        app:layout_constraintTop_toTopOf="@+id/hostscore">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="118dp"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/euphoriaregular"
            android:text="@string/host_score"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/hostscore"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.934" />

        <TextView
            android:id="@+id/hostscore"
            android:layout_width="50dp"
            android:layout_height="37dp"
            android:fontFamily="@font/euphoriaregular"
            android:text="@string/___0"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.955"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="61dp"
            android:layout_height="33dp"
            android:fontFamily="@font/euphoriaregular"
            android:text="@string/timemulti"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/time_"
            app:layout_constraintHorizontal_bias="0.622"
            app:layout_constraintStart_toStartOf="@+id/sound"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.934" />

        <TextView
            android:id="@+id/time_"
            android:layout_width="47dp"
            android:layout_height="33dp"
            android:fontFamily="@font/euphoriaregular"
            android:text="@string/____0"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.387"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.934" />

        <ImageButton
            android:id="@+id/sound"
            android:layout_width="66dp"
            android:layout_height="48dp"

            android:clickable="true"
            android:contentDescription="@string/sound"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.921"
            app:srcCompat="@drawable/ic_baseline_music_note_24" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="117dp"
            android:layout_height="24dp"
            android:text="@string/quest_score"
            android:fontFamily="@font/euphoriaregular"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.762"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.591" />

        <TextView
            android:id="@+id/questscore"
            android:layout_width="49dp"
            android:layout_height="20dp"
            android:text="@string/_____0"
            android:fontFamily="@font/euphoriaregular"

            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.953"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.567" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <GridView
        android:id="@+id/gridView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/white"
        android:choiceMode="singleChoice"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"


        android:horizontalSpacing="15dp"
        android:numColumns="4"
        android:stretchMode="columnWidth"
        android:verticalSpacing="15dp" />

</LinearLayout>