<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/harry_potter__1_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="260dp"
            android:layout_height="65dp"
            android:background="@drawable/roundcontainer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.581">

            <EditText
                android:id="@+id/emaillogin"
                android:layout_width="238dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/E_mail"
                android:inputType="textEmailAddress"
                android:textColorHint="#9FA8DA"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="260dp"
            android:layout_height="65dp"
            android:background="@drawable/roundcontainer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintVertical_bias="0.179">

            <EditText
                android:id="@+id/passwordlogin"
                android:layout_width="239dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#9FA8DA"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.523"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.473" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout8"
            android:layout_width="281dp"
            android:layout_height="0dp"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <ImageButton
                android:id="@+id/loginpagebuton"
                android:layout_width="252dp"
                android:layout_height="52dp"
                android:autofillHints="SignIn"
                android:background="@drawable/loginpagebuton"
                android:contentDescription="@string/SignUp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/loginpagebuton" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="46dp"
                android:layout_height="19dp"
                android:text="@string/Login"
                android:textColor="#6D4C41"
                app:layout_constraintBottom_toBottomOf="@+id/loginpagebuton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.463"
                app:layout_constraintStart_toStartOf="@+id/loginpagebuton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.36" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>